--- a/Payment.API/appsettings.json
+++ b/Payment.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RabbitMQ": "Enter the amqps URL"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
