--- a/Stock.API/appsettings.json
+++ b/Stock.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "SqlCon": "Data Source=xxxxxxxxx;Initial Catalog=DesignPatternStockDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "RabbitMQ": "Enter the amqps URL"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
